<resources>
    <string name="app_name">Cartão de Visita</string>
    <string name="card_visitation">Cartão de visitas</string>
    <string name="label_description_new_card">Novo Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_success">Cadastrado com Sucesso</string>
    <string name="label_share">Compartilhar</string>
</resources>